[project]
name = "parent-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.3.35",
    "langgraph>=0.6.10",
    "langgraph-cli[inmem]>=0.4.3",
    "langgraph-sdk>=0.2.9",
    "langgraph-supervisor>=0.0.29",
    "openevals>=0.1.0",
]
